[tool.poetry]
name = "mmpp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
plotly = "^5.23.0"
pandas = "^2.2.2"
black = "^24.4.2"
orca = "^1.8"
psutil = "^6.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
